Moved index.html outside of pages folder

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,7 +34,7 @@
         <!-- The top heading -->
           <h1 id="heading1">Contact Me
             <!-- Links the logo to the home page and sets it inline using the logo class -->
-            <a class="logo" href="../pages/index.html" target="_self"><img class="logo" src="../images/slapPapLogo.png" alt="logo" /></a>
+            <a class="logo" href="../index.html" target="_self"><img class="logo" src="../images/slapPapLogo.png" alt="logo" /></a>
           </h1>
         </header>
       </div><!-- end of heading div -->
@@ -43,7 +43,7 @@
         <!-- top navigation bar -->
         <nav class="headNav">
           <ul>
-            <li><a href="../pages/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="../pages/cpp_projects.html">C++ Projects</a></li>
             <li><a href="../pages/unreal_projects.html">Unreal Engine 4</a></li>
             <li><a href="../pages/contact.html">Contact Me</a></li>
