--- a/pages/cpp_projects.html
+++ b/pages/cpp_projects.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--
-      OC CIS 155 Web Development I
-      Build on Concepts Project #1
-
-      Line 8 for grading - Student Name: Bryan Hyland
-      Line 9 for grading - Date:         8 Aug 18
-
-      Filename: cpp_projects.html
-      Supporting files: layout.css, slapPapLogo.png
-    -->
     <meta charset="utf-8" />
     <meta name="description" content="CPP Projects" />
     <meta name="keywords" content="C++, Game Programming, video game, programmer, software developer" />
@@ -32,32 +22,31 @@
 
   <body>
     <div id="majorContainer">
-      <div id="heading"> <!-- Line 34 Start of Heading div for grading -->
+      <div id="heading">
         <header>
-          <!-- This sets the h1 in the heading class and aside in the logo class inline to each other -->
           <h1 id="heading1">C++ Projects
-            <a href="../pages/index.html"><img class="logo" src="../images/slapPapLogo.png" alt="logo" /></a>
+            <a href="../index.html"><img class="logo" src="../images/slapPapLogo.png" alt="logo" /></a>
           </h1>
         </header>
-      </div> <!-- Line 41 End of heading div for grading -->
+      </div> 
 
-      <div id="navigation"> <!-- Line 43 Start of Navigation Div for grading -->
+      <div id="navigation">
         <!-- top navigation bar -->
         <nav class="headNav">
           <ul>
-            <li><a href="../pages/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="../pages/cpp_projects.html">C++ Projects</a></li>
             <li><a href="../pages/unreal_projects.html">Unreal Engine 4</a></li>
             <li><a href="../pages/contact.html">Contact Me</a></li>
           </ul>
         </nav>
-      </div><!-- Line 53 End of navigation div for grading -->
+      </div>
 
       <section>
-        <header id="cpp_Projs"><h2>C++ Project Page</h2></header> <!-- Line 56 header for grading -->
+        <header id="cpp_Projs"><h2>C++ Project Page</h2></header>
 
-        <section class="arti_tab"> <!-- Line 58 start of columner content for grading -->
-        <article> <!-- Line 59 Start of article element for grading -->
+        <section class="arti_tab">
+        <article>
           <table id="article_table">
             <thead>
               <tr><th>Making Games</th></tr>
@@ -81,19 +70,19 @@
               <td>Making games is fun. I enjoy making them. Don't ask me why, but I do.
                   The satisfaction of seeing people play my games makes me happy.</td>
             </tr>
-          </table> <!-- Line 81 End of coumner Content for grading -->
-          <form id="updateForm" method="post"> <!-- Line 82 for grading, This is the update mailing list form -->
+          </table>
+          <form id="updateForm" method="post">
             <h2>Sign Up For Updates</h2>
             First Name: <input type="text" name="firstname"  id="fname"/><br><br>
             Last Name: <input type="text" name="lastname" id="lname"/><br><br>
             E-mail Address: &nbsp;<input type="email" name="emailaddress" /><br><br>
             <input type="reset" name="resetbutton" value="Reset Form" />
             <input type="submit" name="submitbutton" id="subButton" onclick="formSubmit(this.form)" value="Submit" />
-          </form> <!-- Line 89 end of form for grading -->
-        </article> <!-- Line 90 end of article element for grading -->
+          </form>
+        </article>
       </section>
 
-        <section id="videos"><!-- Line 93 for grading, This section holds the videos of the projects -->
+        <section id="videos">
           <video controls poster="../images/mario.png">
             <source src="../videos/mario_platformer.mp4" type="video/mp4" />
           </video>
@@ -103,10 +92,10 @@
           <video controls poster="..images/space_rogue_2.png">
             <source src="../videos/Space_Rogue2.mp4" type="video/mp4">
             </video>
-        </section> <!-- Line 103 end of horizontal grouping for grading -->
+        </section>
 
 
-        <table id="project_list"><!-- Line 106 for grading, Table listing the details for each project -->
+        <table id="project_list">
           <thead>
             <tr>
               <th colspan="4">Project Details</th>
@@ -139,13 +128,13 @@
               <td>1.5 Weeks</td>
             </tr>
           </tbody>
-        </table> <!-- Line 139 End of table for grading -->
+        </table>
 
         <div class="BG">&nbsp;</div> <!-- Untiled background image -->
 
-        <footer> <!-- Line 143 Start of footer element for grading -->
+        <footer>
           &copy; Bryan Hyland
-        </footer><!-- Line 145 End of footer element for grading -->
+        </footer>
       </section>
     </div> <!-- end of major container div -->
 
