--- a/pages/unity_projects.html
+++ b/pages/unity_projects.html
@@ -1,17 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
-    <!--
-      OC CIS 155 Web Development I
-      Build on Concepts Project #1
-
-      Student Name: Bryan Hyland
-      Date:         16 Jul 18
-
-      Filename: unity_projects.html
-      Supporting files: layout.css, slapPapLogo.png
-    -->
     <meta charset="utf-8" />
     <meta name="description" content="Unity Projects" />
     <meta name="keywords" content="Portfolio", "Unity3D", "Unity" />
@@ -26,13 +15,13 @@
   <body>
     <!-- This sets the h1 in the heading class -->
     <h1 id="heading1"> Unity projects
-      <a class="logo" href="../docs/index.html"><img class="logo" src="../images/slapPapLogo.png" /></a>
+      <a class="logo" href="../index.html"><img class="logo" src="../images/slapPapLogo.png" /></a>
     </h1>
 
     <!-- Top Navigation Bar -->
     <nav class="headNav">
       <ul>
-        <li><a href="../pages/index.html"> Home </a></li>
+        <li><a href="../index.html"> Home </a></li>
         <li><a href="../pages/unity_projects.html"> Unity Projects </a></li>
         <li><a href="../pages/contact.html"> Contact Me </a></li>
       </ul>
