--- a/pages/unreal_projects.html
+++ b/pages/unreal_projects.html
@@ -44,7 +44,7 @@
     <!-- header and nav beginning line 44 -->
       <div> <!-- heading div begins -->
         <map name="logo_map"> <!-- Line 46  for grading start image map -->
-          <area shape="poly" coords="52,9,26,22,20,53,27,80,47,88,93,48,82,24" href="../pages/index.html" alt="SlappyPappyLogo" />
+          <area shape="poly" coords="52,9,26,22,20,53,27,80,47,88,93,48,82,24" href="../index.html" alt="SlappyPappyLogo" />
         </map> <!-- Line 48 end image map -->
       <!-- This sets the h1 in the heading class -->
         <header>
@@ -56,7 +56,7 @@
         <!-- top navigation bar -->
         <nav class="headNav">
           <ul>
-            <li><a href="../pages/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="../pages/cpp_projects.html">C++ Projects</a></li>
             <li><a href="../pages/unreal_projects.html">Unreal Engine 4</a></li>
             <li><a href="../pages/contact.html">Contact Me</a></li>
