--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- top navigation bar -->
         <nav class="headNav">
           <ul>
-            <li><a href="../pages/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="../pages/cpp_projects.html">C++ Projects</a></li>
             <li><a href="../pages/unreal_projects.html">Unreal Engine 4</a></li>
             <li><a href="../pages/contact.html">Contact Me</a></li>
