Updated index page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <title> Bryan's Portfolio </title>
 
-    <link rel="stylesheet" type="text/css" href="../css/layout.css" />
-    <link rel="stylesheet" type="text/css" href="../css/sbstyles.css" />
+    <link rel="stylesheet" type="text/css" href="./css/layout.css" />
+    <link rel="stylesheet" type="text/css" href="./css/sbstyles.css" />
 
     <style>
       body {
@@ -24,7 +24,7 @@
         <header>
           <!-- This sets the h1 in the heading class and aside in the logo class inline to each other -->
           <h1 id="heading1">Bryan's Portfolio
-            <a href="https://bhh32.github.io" target="_blank"><img class="logo" src="../images/slapPapLogo.png" alt="logo" /></a>
+            <a href="https://bhh32.github.io" target="_blank"><img class="logo" src="./images/slapPapLogo.png" alt="logo" /></a>
           </h1>
         </header>
       </div> <!-- end of heading div -->
@@ -33,10 +33,10 @@
         <!-- top navigation bar -->
         <nav class="headNav">
           <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../pages/cpp_projects.html">C++ Projects</a></li>
-            <li><a href="../pages/unreal_projects.html">Unreal Engine 4</a></li>
-            <li><a href="../pages/contact.html">Contact Me</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./pages/cpp_projects.html">C++ Projects</a></li>
+            <li><a href="./pages/unreal_projects.html">Unreal Engine 4</a></li>
+            <li><a href="./pages/contact.html">Contact Me</a></li>
           </ul>
         </nav>
       </div><!-- end of navigation div -->
