--- a/pages/cpp_projects.html
+++ b/pages/cpp_projects.html
@@ -89,7 +89,7 @@
           <video controls poster="../images/space_rogue_1.png">
             <source src="../videos/Space_Rogue1.mp4" type="video/mp4" />
           </video>
-          <video controls poster="..images/space_rogue_2.png">
+          <video controls poster="../images/space_rogue_2.png">
             <source src="../videos/Space_Rogue2.mp4" type="video/mp4">
             </video>
         </section>
