Updated contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -52,8 +52,7 @@
         <ul class="portfolioLinks">
           <li><a href="https://resume.creddle.io/resume/kh4jwsbndq">Resume</a></li>
           <li><a href="https://github.com/bhh32">GitHub Account</a></li>
-          <li><a href="https://www.facebook.com/ElegantCoderThreeTwo/">Facebook Page</a></li>
-          <li><a href="mailto:bryanhyland@student.olympic.edu"> Email Me </a></li>
+          <li><a href="mailto:bryan.hyland32@gmail.com"> Email Me </a></li>
         </ul>
       </section>
     </div> <!-- end majorContainer div -->
