--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,62 +7,60 @@
     <meta name="keywords" content="Unity3D, games, video games, unity games" />
     <title> Bryan's Portfolio - Contact </title>
 
-    <link rel="stylesheet" type="text/css" href="../css/layout.css" />
-    <link rel="stylesheet" type="text/css" href="../css/sbstyles.css" />
-
-    <style>
-      body {
-        background: linear-gradient(70deg, rgb(0, 0, 0), rgb(53, 53, 53) 80%);
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
+    <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
+    <link rel="stylesheet" type="text/css" href="../css/contact.css" />
   </head>
 
   <body>
-    <div id="majorContainer">
-      <div id="heading">
-        <header>
-        <!-- The top heading -->
-          <h1 id="heading1">Contact Me
-            <!-- Links the logo to the home page and sets it inline using the logo class -->
-            <a class="logo" href="../index.html" target="_self"><img class="logo" src="../images/slapPapLogo.png" alt="logo" /></a>
-          </h1>
-        </header>
-      </div><!-- end of heading div -->
-
-      <div id="navigation">
-        <!-- top navigation bar -->
-        <nav class="headNav">
-          <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../pages/cpp_projects.html">C++ Projects</a></li>
-            <li><a href="../pages/unreal_projects.html">Unreal Engine 4</a></li>
-            <li><a href="../pages/contact.html">Contact Me</a></li>
-          </ul>
-        </nav>
-      </div><!-- end of navigation div -->
-      <!-- contactMe Section -->
-      <section class="contactMe">
-        <p class="contactMe">
-          I hope you liked what I have linked here. If you have any questions or comments for
-          please let me know what they are. Also, please follow the links below to see more if
-          you're interested in what I do.
+    <header>
+      <h1 class="headertext">Bryan's Portfolio</h1>
+      <a href="../index.html"><img class="header-img" src="../images/slapPapLogo.png" alt="slappy-pappy-logo" /></a>
+    </header>
+    <!-- top navigation bar -->
+    <nav class="headNav">
+      <a class="navlink index" href="../index.html">
+        <p>Home</p>
+      </a>
+      <a class="navlink cpp" href="../pages/cpp_projects.html">
+        <p>C++ Projects</p>
+      </a>
+      <a class="navlink java" href="../pages/java_projects.html">
+        <p>Java</p>
+      </a>
+      <a class="navlink cs" href="../pages/csharp_projects.html">
+        <p>C# Projects</p>
+      </a>
+      <a class="navlink unreal" href="../pages/unreal_projects.html">
+        <p>Unreal Engine 4</p>
+      </a>
+      <a class="navlink unity" href="../pages/unity_projects.html">
+        <p>Unity</p>
+      </a>
+      <a class="navlink contact" href="../pages/contact.html">
+        <p>Contact Me</p>
+      </a>
+    </nav>
+    <div class="content">
+      <section class="contact">
+        <h3 class="contact-head">Contact Me</h3>
+        <p class="conatact-body">Feel free to contact me and tell me what you think. Even if that includes constructive
+          criticism to make myself and my projects better! Thank you for visiting, and ensure you check back often to see what
+          exciting new projects I'm working on!</p>
+        <p class="contact-links">
+          <a class="contact-link contact-resume" href="https://resume.creddle.io/resume/kh4jwsbndq">Bryan's Resume</a><br />
+          <a class="contact-link contact-github" href="https://github.com/bhh32/">Bryan's GitHub Repositories</a><br />
+          <a class="contact-link contact-email" href="mailto:bryan.hyland32@gmail.com">Bryan's Email</a><br />
         </p>
-
-        <!-- Contact Links  -->
-        <ul class="portfolioLinks">
-          <li><a href="https://resume.creddle.io/resume/kh4jwsbndq">Resume</a></li>
-          <li><a href="https://github.com/bhh32">GitHub Account</a></li>
-          <li><a href="mailto:bryan.hyland32@gmail.com"> Email Me </a></li>
-        </ul>
       </section>
-    </div> <!-- end majorContainer div -->
-
-    <div class="BG">&nbsp;</div>
-
-    <footer>
-      &copy; Bryan Hyland
-    </footer>
+    </div>      
+      <footer id="footer">
+        <div class="footer-text">&copy; Bryan Hyland</div>
+        <div class="footer-contact">
+          <a class="footer-contact-item resume" href="https://resume.creddle.io/resume/kh4jwsbndq">Resume</a>
+          <a class="footer-contact-item github" href="https://github.com/bhh32/">GitHub</a>
+          <a class="footer-contact-item email" href="mailto:bryan.hyland32@gmail.com">Email</a>
+        </div>
+      </footer>
   </body>
-
-
 </html>
