--- a/pages/java_projects.html
+++ b/pages/java_projects.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title> Bryan's Portfolio </title>
+<html lang="en">
 
-    <link rel="stylesheet" type="text/css" href="../css/sbstyles.css" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="description" content="Bryan's Contact Info" />
+  <meta name="author" content="Bryan Hyland" />
+  <meta name="keywords" content="Unity3D, games, video games, unity games" />
+  <title> Bryan's Portfolio - Contact </title>
 
-  </head>
+  <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
+  <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
+  <link rel="stylesheet" type="text/css" href="../css/java.css" />
+</head>
+
+<body>
+  <header>
+    <h1 class="headertext">Bryan's Portfolio</h1>
+    <a href="../index.html"><img class="header-img" src="../images/slapPapLogo.png" alt="slappy-pappy-logo" /></a>
+  </header>
+  <!-- top navigation bar -->
+  <nav class="headNav">
+    <a class="navlink index" href="../index.html">
+      <p>Home</p>
+    </a>
+    <a class="navlink cpp" href="../pages/cpp_projects.html">
+      <p>C++ Projects</p>
+    </a>
+    <a class="navlink java" href="../pages/java_projects.html">
+      <p>Java</p>
+    </a>
+    <a class="navlink cs" href="../pages/csharp_projects.html">
+      <p>C# Projects</p>
+    </a>
+    <a class="navlink unreal" href="../pages/unreal_projects.html">
+      <p>Unreal Engine 4</p>
+    </a>
+    <a class="navlink unity" href="../pages/unity_projects.html">
+      <p>Unity</p>
+    </a>
+    <a class="navlink contact" href="../pages/contact.html">
+      <p>Contact Me</p>
+    </a>
+  </nav>
+  <div class="content">
+    <section class="page-text">
+      <h3 class="page-text-head">Java Projects</h3>
+      <div class="page-text-body">
+        <h1>Comming Soon! Please check back I have quite a few exciting Java projects to share with you!</h1>
+      </div>
+    </section>
+  </div>
+  <footer id="footer">
+    <div class="footer-text">&copy; Bryan Hyland</div>
+    <div class="footer-contact">
+      <a class="footer-contact-item resume" href="https://resume.creddle.io/resume/kh4jwsbndq">Resume</a>
+      <a class="footer-contact-item github" href="https://github.com/bhh32/">GitHub</a>
+      <a class="footer-contact-item email" href="mailto:bryan.hyland32@gmail.com">Email</a>
+    </div>
+  </footer>
+</body>
 </html>
