--- a/pages/cpp_projects.html
+++ b/pages/cpp_projects.html
@@ -1,142 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8" />
-    <meta name="description" content="CPP Projects" />
-    <meta name="keywords" content="C++, Game Programming, video game, programmer, software developer" />
-    <meta name="author" content="Bryan Hyland" />
+  <meta charset="utf-8" />
+  <meta name="description" content="Bryan Hyland's Portfolio" />
+  <meta name="keywords" content="Game Programming, video game, programmer, software developer" />
+  <meta name="author" content="Bryan Hyland" />
 
-    <title> C++ Projects </title>
+  <title>Bryan's Portfolio - C++</title>
 
-    <link rel="stylesheet" type="text/css" href="../css/layout.css" />
-    <link rel="stylesheet" type="text/css" href="../css/sbstyles.css" />
-    <link rel="stylesheet" type="text/css" href="../css/cpp_styles.css" />
-    <script src="../js/cpp_js.js" type="text/javascript"></script>
+  <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
+  <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
+  <link rel="stylesheet" type="text/css" href="../css/cpp.css" />
+</head>
 
-    <style>
-      body {
-        background: linear-gradient(70deg, rgb(0, 0, 0), rgb(53, 53, 53) 80%);
-      }
-    </style>
-  </head>
-
-  <body>
-    <div id="majorContainer">
-      <div id="heading">
-        <header>
-          <h1 id="heading1">C++ Projects
-            <a href="../index.html"><img class="logo" src="../images/slapPapLogo.png" alt="logo" /></a>
-          </h1>
-        </header>
-      </div> 
-
-      <div id="navigation">
-        <!-- top navigation bar -->
-        <nav class="headNav">
-          <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../pages/cpp_projects.html">C++ Projects</a></li>
-            <li><a href="../pages/unreal_projects.html">Unreal Engine 4</a></li>
-            <li><a href="../pages/contact.html">Contact Me</a></li>
-          </ul>
-        </nav>
+<body>
+  <header>
+    <h1 class="headertext">Bryan's Portfolio</h1>
+    <img class="header-img" src="../images/slapPapLogo.png" alt="slappy-pappy-logo" />
+  </header>
+  <!-- top navigation bar -->
+  <nav class="headNav">
+    <a class="navlink index" href="../index.html">
+      <p>Home</p>
+    </a>
+    <a class="navlink cpp" href="../pages/cpp_projects.html">
+      <p>C++ Projects</p>
+    </a>
+    <a class="navlink java" href="../pages/java_projects.html">
+      <p>Java</p>
+    </a>
+    <a class="navlink cs" href="../pages/csharp_projects.html">
+      <p>C# Projects</p>
+    </a>
+    <a class="navlink unreal" href="../pages/unreal_projects.html">
+      <p>Unreal Engine 4</p>
+    </a>
+    <a class="navlink unity" href="../pages/unity_projects.html">
+      <p>Unity</p>
+    </a>
+    <a class="navlink contact" href="../pages/contact.html">
+      <p>Contact Me</p>
+    </a>
+  </nav>
+  <div class="content">
+    <!-- Project section -->
+    <section class="page-text">
+      <h3 class="page-text-head">C++ Projects</h3>
+      <div class="page-text-body">
+        <video class="proj-vid mario-vid" controls>
+          <source src="../videos/mario_platformer.mp4" type="video/mp4">
+        </video>
+        <p class="proj-vid-desc mario-desc">This is a project that was done in C++ with a version of
+          the Academy of Interactive Entertainments' minimual feature libraries. Besides the render engine and the sprites, I created
+          everything in this game to include the animation engine, physics/collision engine, player controller, and platform artifical intelligence.
+          The following is a link to the GitHub repository: <a href="https://github.com/bhh32/MathReview/tree/master/GameMath/Assessment5" target="_blank">Mario Game</a>.       
+        </p>
+        <video class="proj-vid space-rouge1" controls>
+          <source src="../videos/Space_Rogue1.mp4" type="video/mp4">
+        </video>
+        <p class="proj-vid-desc space-rouge1-desc">
+          I'm very proud of this particular project because it started out
+          much simpler than it turned out to be. It was one of my first 
+          assessments in the Academy of Interactive Entertainment. It's 
+          done is pure C++ and no helper libraries. I had to create a double buffer system from scratch due to some jitter issues with the first prototype. The game was started and completed in about 6 days. The following is a link to its GitHub repository: <a href="https://github.com/bhh32/IntroToCpp/tree/master/SpaceRouge">Space Rogue Vers. 1</a>
+        </p>
+        <video class="proj-vid space-rouge2" controls>
+          <source src="../videos/Space_Rogue2.mp4" type="video/mp4">
+        </video>
+        <p class="proj-vid-desc space-rouge2-desc">
+          This is a upgraded version of the above Space Rouge game. It used a very rudimentary graphics and sound libary. All game logic, player controllers, collision, AI, etc. is programmed in pure C++. This project took about 3 days to complete. Here is the link to its GitHub repository: <a href="https://github.com/bhh32/OOP/tree/master/Assessment3">Space Rouge Vers. 2</a>
+        </p>
       </div>
+    </section>
+  </div>
+  <footer id="footer">
+    <div class="footer-text">&copy; Bryan Hyland</div>
+    <div class="footer-contact">
+      <a class="footer-contact-item resume" href="https://resume.creddle.io/resume/kh4jwsbndq">Resume</a>
+      <a class="footer-contact-item github" href="https://github.com/bhh32/">GitHub</a>
+      <a class="footer-contact-item email" href="mailto:bryan.hyland32@gmail.com">Email</a>
+    </div>
+  </footer>
+</body>
 
-      <section>
-        <header id="cpp_Projs"><h2>C++ Project Page</h2></header>
-
-        <section class="arti_tab">
-        <article>
-          <table id="article_table">
-            <thead>
-              <tr><th>Making Games</th></tr>
-            </thead>
-            <tr>
-              <td>The form works, mostly. If you put your name in and
-                  click submit you'll get a popup window using the input fields.
-                  I'm not really sure what else I should write here
-                  for now, but maybe this'll do.</td>
-              <td>Have you ever made a video game before? If it's something that you think
-                  you'd like to try, I encourage it. I love to program, and making games is
-                  highly enjoyable to me. I know some would say that I'm crazy for putting
-                  myself through the anguish of sitting for hours staring at a computer
-                  writing code. I will admit that we all have to be some kind of crazy for
-                  this type of work to be something that we actually want to do. The reward
-                  for me however is when I get to see someone play my game, and enjoy it. I've
-                  had a few people test games there we at most playable. To see them laugh and
-                  have a good time playing them made all the hours of programming and debugging
-                  worth it. Bringing joy to people's lives is something I truly enjoy, and this
-                  happens to be the way that I do that.</td>
-              <td>Making games is fun. I enjoy making them. Don't ask me why, but I do.
-                  The satisfaction of seeing people play my games makes me happy.</td>
-            </tr>
-          </table>
-          <form id="updateForm" method="post">
-            <h2>Sign Up For Updates</h2>
-            First Name: <input type="text" name="firstname"  id="fname"/><br><br>
-            Last Name: <input type="text" name="lastname" id="lname"/><br><br>
-            E-mail Address: &nbsp;<input type="email" name="emailaddress" /><br><br>
-            <input type="reset" name="resetbutton" value="Reset Form" />
-            <input type="submit" name="submitbutton" id="subButton" onclick="formSubmit(this.form)" value="Submit" />
-          </form>
-        </article>
-      </section>
-
-        <section id="videos">
-          <video controls poster="../images/mario.png">
-            <source src="../videos/mario_platformer.mp4" type="video/mp4" />
-          </video>
-          <video controls poster="../images/space_rogue_1.png">
-            <source src="../videos/Space_Rogue1.mp4" type="video/mp4" />
-          </video>
-          <video controls poster="../images/space_rogue_2.png">
-            <source src="../videos/Space_Rogue2.mp4" type="video/mp4">
-            </video>
-        </section>
-
-
-        <table id="project_list">
-          <thead>
-            <tr>
-              <th colspan="4">Project Details</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <tr><!-- Table Column Information -->
-              <th>Project Name</th>
-              <th>Type Of Project</th>
-              <th>API Used</th>
-              <th>Time To Complete</th>
-            </tr>
-            <tr><!-- Mario Platformer Information -->
-              <td>Mario<br/>Platformer</td>
-              <td>Console</td>
-              <td>In-house<br/>Engine</td>
-              <td>1 Week</td>
-            </tr>
-            <tr><!-- Space Rogue 1 -->
-              <td>Space Rouge<br/>Vers 1</td>
-              <td>Console</td>
-              <td>C++ Standard<br/>Library</td>
-              <td>1.5 Weeks</td>
-            </tr>
-            <tr><!-- Space Rouge 2 -->
-              <td>Space Rogue<br/>Vers 2</td>
-              <td>Console</td>
-              <td>C++ Standard<br/>Library</td>
-              <td>1.5 Weeks</td>
-            </tr>
-          </tbody>
-        </table>
-
-        <div class="BG">&nbsp;</div> <!-- Untiled background image -->
-
-        <footer>
-          &copy; Bryan Hyland
-        </footer>
-      </section>
-    </div> <!-- end of major container div -->
-
-  </body>
 </html>
