--- a/pages/unity_projects.html
+++ b/pages/unity_projects.html
@@ -46,7 +46,7 @@
     <section class="page-text">
       <h3 class="page-text-head">Unreal Engine 4 Projects</h3>
       <div class="page-text-body">
-        <h1>Comming Soon! Please check back I have quite a few exciting Java projects to share with you!</h1>
+        <h1>Comming Soon! Please check back I have quite a few exciting Unity3D projects to share with you!</h1>
       </div>
     </section>
   </div>
