--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,12 +25,8 @@
       <a class="navlink cpp" href="../pages/cpp_projects.html">
         <p>C++ Projects</p>
       </a>
-      <a class="navlink java" href="../pages/java_projects.html">
-        <p>Java</p>
-      </a>
-      <a class="navlink cs" href="../pages/csharp_projects.html">
-        <p>C# Projects</p>
-      </a>
+      <!--<a class="navlink java" href="./pages/java_projects.html"><p>Java</p></a>-->
+      <!--<a class="navlink cs" href="./pages/csharp_projects.html"><p>C# Projects</p></a>-->
       <a class="navlink unreal" href="../pages/unreal_projects.html">
         <p>Unreal Engine 4</p>
       </a>
