Updated Unity Page

--- a/pages/unity_projects.html
+++ b/pages/unity_projects.html
@@ -42,7 +42,19 @@
     <section class="page-text">
       <h3 class="page-text-head">Unity3D Projects</h3>
       <div class="page-text-body">
-        <h1>Comming Soon! Please check back I have quite a few exciting Unity3D projects to share with you!</h1>
+        <video class="proj-vid thirty-sec-vid" controls>
+          <source src="../videos/30_sec_vid.mp4" type="video/mp4">
+        </video>
+        <p class="proj-vid-desc thirty-sec-desc">
+          This was a one day game jam game that myself and another programmer put together for.
+          My contributions were the character controller, enemy AI, damage to enemies, platform AI, cannon functionality,
+          checkpoint functionality, UI, win/loss state, character damage, camera controller, player animation controller,
+          player health reset on "play again" menu choice, and audio programming.<br /><br />
+          I also did the level design and object placement. I have gotten permission from the other programmer to continue
+          to develop this game, so it's still in slow progress as a lone project. It's best played with an XBox One controller
+          and if you'd like to play it you can download and install from here:<br />
+          <a href="https://drive.google.com/file/d/1xIiwSermtKz-RtkDzpY5cubKMelAP3Wh/view?usp=sharing">Thirty Seconds - Windows</a><br />
+        </p>
       </div>
     </section>
   </div>
