--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="./css/newlayout.css" />
     <link rel="stylesheet" type="text/css" href="./css/newstandardstyle.css" />
+    <link rel="stylesheet" type="text/css" href="./css/home.css" />
   </head>
 
   <body>
