Updated meta viewport tag and title tags

--- a/pages/unity_projects.html
+++ b/pages/unity_projects.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="description" content="Bryan's Contact Info" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Bryan Hyland" />
   <meta name="keywords" content="Unity3D, games, video games, unity games" />
-  <title> Bryan's Portfolio - Contact </title>
+  <title>Bryan's Portfolio - Unit3D</title>
 
   <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
   <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
