--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bryan Hyland's Portfolio" />
     <meta name="keywords" content="Game Programming, video game, programmer, software developer" />
     <meta name="author" content="Bryan Hyland" />
 
-    <title> Bryan's Portfolio </title>
+    <title>Bryan's Portfolio - Home</title>
 
     <link rel="stylesheet" type="text/css" href="./css/newlayout.css" />
     <link rel="stylesheet" type="text/css" href="./css/newstandardstyle.css" />
