--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Bryan's Contact Info" />
     <meta name="author" content="Bryan Hyland" />
     <meta name="keywords" content="Unity3D, games, video games, unity games" />
@@ -49,7 +50,7 @@
           <a class="contact-link contact-email" href="mailto:bryan.hyland32@gmail.com">Bryan's Email</a><br />
         </p>
       </section>
-    </div>      
+    </div>
       <footer id="footer">
         <div class="footer-text">&copy; Bryan Hyland</div>
         <div class="footer-contact">
