--- a/pages/cpp_projects.html
+++ b/pages/cpp_projects.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Bryan Hyland's Portfolio" />
   <meta name="keywords" content="Game Programming, video game, programmer, software developer" />
   <meta name="author" content="Bryan Hyland" />
@@ -40,15 +41,15 @@
         <p class="proj-vid-desc mario-desc">This is a project that was done in C++ with a version of
           the Academy of Interactive Entertainments' minimual feature libraries. Besides the render engine and the sprites, I created
           everything in this game to include the animation engine, physics/collision engine, player controller, and platform artifical intelligence.
-          The following is a link to the GitHub repository: <a href="https://github.com/bhh32/MathReview/tree/master/GameMath/Assessment5" target="_blank">Mario Game</a>.       
+          The following is a link to the GitHub repository: <a href="https://github.com/bhh32/MathReview/tree/master/GameMath/Assessment5" target="_blank">Mario Game</a>.
         </p>
         <video class="proj-vid space-rouge1" controls>
           <source src="../videos/Space_Rogue1.mp4" type="video/mp4">
         </video>
         <p class="proj-vid-desc space-rouge1-desc">
           I'm very proud of this particular project because it started out
-          much simpler than it turned out to be. It was one of my first 
-          assessments in the Academy of Interactive Entertainment. It's 
+          much simpler than it turned out to be. It was one of my first
+          assessments in the Academy of Interactive Entertainment. It's
           done is pure C++ and no helper libraries. I had to create a double buffer system from scratch due to some jitter issues with the first prototype. The game was started and completed in about 6 days. The following is a link to its GitHub repository: <a href="https://github.com/bhh32/IntroToCpp/tree/master/SpaceRouge">Space Rogue Vers. 1</a>
         </p>
         <video class="proj-vid space-rouge2" controls>
