--- a/pages/csharp_projects.html
+++ b/pages/csharp_projects.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Bryan's Contact Info" />
     <meta name="author" content="Bryan Hyland" />
     <meta name="keywords" content="Unity3D, games, video games, unity games" />
-    <title> Bryan's Portfolio - Contact </title>
+    <title> Bryan's Portfolio - C#</title>
 
     <link rel="stylesheet" type="text/css" href="../css/newlayout.css" />
     <link rel="stylesheet" type="text/css" href="../css/newstandardstyle.css" />
