Updated Standard Layout, Added Adobe Illustrator Page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,12 +34,13 @@
       <a class="navlink unity" href="../pages/unity_projects.html">
         <p>Unity</p>
       </a>
+      <a class="navlink illustrator" href="../pages/illustrator.html"><p>Illustrator</p></a>
       <a class="navlink contact" href="../pages/contact.html">
         <p>Contact Me</p>
       </a>
     </nav>
     <div class="content">
-      <section class="contact">
+      <section class="contact page-text">
         <h3 class="contact-head">Contact Me</h3>
         <p class="conatact-body">Feel free to contact me and tell me what you think. Even if that includes constructive
           criticism to make myself and my projects better! Thank you for visiting, and ensure you check back often to see what
