--- a/pages/cpp_projects.html
+++ b/pages/cpp_projects.html
@@ -28,6 +28,7 @@
     <!--<a class="navlink cs" href="./pages/csharp_projects.html"><p>C# Projects</p></a>-->
     <a class="navlink unreal" href="../pages/unreal_projects.html"><p>Unreal Engine 4</p></a>
     <a class="navlink unity" href="../pages/unity_projects.html"><p>Unity</p></a>
+    <a class="navlink illustrator" href="../pages/illustrator.html"><p>Illustrator</p></a>
     <a class="navlink contact" href="../pages/contact.html"><p>Contact Me</p></a>
   </nav>
   <div class="content">
