--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
       <!--<a class="navlink cs" href="./pages/csharp_projects.html"><p>C# Projects</p></a>-->
       <a class="navlink unreal" href="./pages/unreal_projects.html"><p>Unreal Engine 4</p></a>
       <a class="navlink unity" href="./pages/unity_projects.html"><p>Unity</p></a>
+      <a class="navlink illustrator" href="./pages/illustrator.html"><p>Illustrator</p></a>
       <a class="navlink contact" href="./pages/contact.html"><p>Contact Me</p></a>
     </nav>
     <div class="content">
     <!-- Introduction section -->
-      <section class="intro">
+      <section class="intro page-text">
         <h3 class="intro-head">Introduction</h3>
         <p class="intro-body">Hello, my name is Bryan. I am a programmer that does all types of different programming.
             Most of my projects are video games. Visit each particular page to see what I've done
