--- a/pages/java_projects.html
+++ b/pages/java_projects.html
@@ -39,6 +39,7 @@
     <a class="navlink unity" href="../pages/unity_projects.html">
       <p>Unity</p>
     </a>
+    <a class="navlink illustrator" href="../pages/illustrator.html"><p>Illustrator</p></a>
     <a class="navlink contact" href="../pages/contact.html">
       <p>Contact Me</p>
     </a>
