--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <!-- top navigation bar -->
     <nav class="headNav">
-      <a class="navlink index" href="./index.html"><p>Home</p></a>
+      <a class="navlink index active-navlink" href="./index.html"><p>Home</p></a>
       <a class="navlink cpp" href="./pages/cpp_projects.html"><p>C++ Projects</p></a>
       <!--<a class="navlink java" href="./pages/java_projects.html"><p>Java</p></a>-->
       <!--<a class="navlink cs" href="./pages/csharp_projects.html"><p>C# Projects</p></a>-->
