--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,7 +35,7 @@
         <p>Unity</p>
       </a>
       <a class="navlink illustrator" href="../pages/illustrator.html"><p>Illustrator</p></a>
-      <a class="navlink contact" href="../pages/contact.html">
+      <a class="navlink contact active-navlink" href="../pages/contact.html">
         <p>Contact Me</p>
       </a>
     </nav>
