--- a/pages/csharp_projects.html
+++ b/pages/csharp_projects.html
@@ -30,7 +30,7 @@
         <a class="navlink java" href="../pages/java_projects.html">
             <p>Java</p>
         </a>
-        <a class="navlink cs" href="../pages/csharp_projects.html">
+        <a class="navlink cs active-navlink" href="../pages/csharp_projects.html">
             <p>C# Projects</p>
         </a>
         <a class="navlink unreal" href="../pages/unreal_projects.html">
