--- a/pages/unreal_projects.html
+++ b/pages/unreal_projects.html
@@ -29,7 +29,7 @@
     </a>
     <!--<a class="navlink java" href="./pages/java_projects.html"><p>Java</p></a>-->
     <!--<a class="navlink cs" href="./pages/csharp_projects.html"><p>C# Projects</p></a>-->
-    <a class="navlink unreal" href="../pages/unreal_projects.html">
+    <a class="navlink unreal active-navlink" href="../pages/unreal_projects.html">
       <p>Unreal Engine 4</p>
     </a>
     <a class="navlink unity" href="../pages/unity_projects.html">
