--- a/pages/illustrator.html
+++ b/pages/illustrator.html
@@ -35,7 +35,7 @@
     <a class="navlink unity" href="../pages/unity_projects.html">
       <p>Unity</p>
     </a>
-    <a class="navlink illustrator" href="../pages/illustrator.html"><p>Illustrator</p></a>
+    <a class="navlink illustrator active-navlink" href="../pages/illustrator.html"><p>Illustrator</p></a>
     <a class="navlink contact" href="../pages/contact.html">
       <p>Contact Me</p>
     </a>
