--- a/pages/java_projects.html
+++ b/pages/java_projects.html
@@ -27,7 +27,7 @@
     <a class="navlink cpp" href="../pages/cpp_projects.html">
       <p>C++ Projects</p>
     </a>
-    <a class="navlink java" href="../pages/java_projects.html">
+    <a class="navlink java active-navlink" href="../pages/java_projects.html">
       <p>Java</p>
     </a>
     <a class="navlink cs" href="../pages/csharp_projects.html">
