--- a/pages/unity_projects.html
+++ b/pages/unity_projects.html
@@ -32,7 +32,7 @@
     <a class="navlink unreal" href="../pages/unreal_projects.html">
       <p>Unreal Engine 4</p>
     </a>
-    <a class="navlink unity" href="../pages/unity_projects.html">
+    <a class="navlink unity active-navlink" href="../pages/unity_projects.html">
       <p>Unity</p>
     </a>
     <a class="navlink illustrator" href="../pages/illustrator.html"><p>Illustrator</p></a>
