--- a/pages/cpp_projects.html
+++ b/pages/cpp_projects.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <h1 class="headertext">Bryan's Portfolio</h1>
+    <h1 class="headertext">Bryan Hyland<br />Developer for the Masses</h1>
     <img class="header-img" src="../images/slapPapLogo.png" alt="slappy-pappy-logo" />
   </header>
   <!-- top navigation bar -->
