--- a/pages/csharp_projects.html
+++ b/pages/csharp_projects.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <h1 class="headertext">Bryan's Portfolio</h1>
+        <h1 class="headertext">Bryan Hyland<br />Developer for the Masses</h1>
         <a href="../index.html"><img class="header-img" src="../images/slapPapLogo.png" alt="slappy-pappy-logo" /></a>
     </header>
     <!-- top navigation bar -->
