--- a/pages/illustrator.html
+++ b/pages/illustrator.html
@@ -71,6 +71,11 @@
           good with pen and paper, Illustrator was my go to. You can see him bigger here:
           <a href="../images/the-seeker.jpg" target="_blank">The Seeker</a>
         </p>
+        <img class="ill-pic slappy-pappy-pic" src="../images/slapPapLogo.png" alt="slappy-pappy-logo" />
+        <p class="ill-pic-desc slappy-pappy-desc">
+          Slappy Pappy is the realization of a joke from a classmate and my conversations while commuting. She, being an artist, hand
+          drew him, and I took that sketch and inked it in Illustrator. It has now become my not-so-official logo!
+        </p>
       </div>
     </section>
   </div>
