--- a/pages/unity_projects.html
+++ b/pages/unity_projects.html
@@ -69,9 +69,9 @@
           it detects one it defaults to the controller, whereas if it doesn't detect an Xbox controller its controls are mouse/keyboard.<br /><br />
           I used Kenny Assets for the character and props in the room. Other interesting features this game has are as follows:<br />
           - Camera system that detects if the  player is close enough to a wall the wall becomes transparent so the player can still be seen.<br />
-          - Pickup inheritance: Both types of pickups come from a base pickup script that is then extended by any other pickup objects that have special features.
+          - Pickup inheritance: Both types of pickups come from a base pickup script that is then extended by any other pickup objects that have special features.<br/>
           - Exploding Pickups: The exploding pickups spawn more base pickups that are then added into the achievement system as to how many pickups need to be collected
-          before getting the next achievement.
+          before getting the next achievement.<br />
           - Achievement System: This is created to populate the star UI as the player collects more pickups, it's recalculated when the user hits an
           exploding pickup. However, if an achievement is earned it isn't taken away just because an exploding pickup was hit.<br />
           <a href="https://drive.google.com/file/d/1PUeXNMUjiEhHuLLDlYOy6GwsQxQJJ0SZ/view?usp=sharing">Clean Your Room - Windows</a><br />
